tests/files/flow_controller_tests/should_run/066.cmdr
x = 8.5;
print round(x);