tests/files/flow_controller_tests/should_fail/040.cmdr
x = true;
print round(x);